--- a/accompany-consullting/src/app/mission/mission.component.css
+++ b/accompany-consullting/src/app/mission/mission.component.css
@@ -1,55 +1,28 @@
-.mission {
-  width: max-content;/* Adjust the width to your desired value */
-  
-   
- }
-.mission-table {
-
-    border-collapse: collapse;
-  }
-  
-  .mission-table td {
-    padding: 10px;
-  }
-  
-  .mission-table form div {
-    margin-bottom: 10px;
-  }
-  
-  .mission-table label {
-    font-weight: bold;
-  }
-  
-  .mission-table input[type="text"] {
-    
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .mission-table button {
-    padding: 10px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .mission-table button:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
-  }
-  
-td {
-    border: 1px solid #333;
-    background-color: #fff;
-}
 
 thead {
     background-color: #23d1e8;
     color: #fff;
 }
 
- 
+ input{
+  margin-left: 100px;
+  margin-right: 100px ;
+ }
+ inputlargeur{
+  width: 1000px ; 
+ }
 
+ .mission-info {
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
+}
+
+.chef-projet-info {
+  display: flex;
+  align-items: center;
+}
+
+.chef-projet-info span {
+  margin-right: 10px;
+}
