--- a/accompany-consullting/src/app/layouts/full/sidebar/sidebar.component.html
+++ b/accompany-consullting/src/app/layouts/full/sidebar/sidebar.component.html
@@ -10,18 +10,28 @@
     <!-- ============================================================== -->
     <!-- Profile - style you can find in header.scss -->
     <!-- ============================================================== -->
-    <div class="profile-text"><a [matMenuTriggerFor]="sdprofile" class=""> {{nom}} <i class="ti-angle-down font-12 m-l-5"></i></a></div>
-    <mat-menu #sdprofile="matMenu" class="mymegamenu">
-        <button mat-menu-item  >
-            <mat-icon>settings</mat-icon> Settings </button>
-        <button mat-menu-item  (click)="(home())">
-            <mat-icon>account_box</mat-icon> Profile </button>
-        <button mat-menu-item>
-            <mat-icon>notifications_off</mat-icon> Disable notifications </button>
-        <button mat-menu-item  (click)="(logout())">
-            <mat-icon>exit_to_app</mat-icon> Sign Out </button>
-    </mat-menu>
-    
+    <div class="profile-text">
+        <a [matMenuTriggerFor]="sdprofile" style="background-color: #185e77;">
+            {{nom}} <mat-icon class="user-icon">account_circle</mat-icon>
+           
+          </a>
+                </div>
+      
+      <mat-menu #sdprofile="matMenu" class="mymegamenu">
+        <button mat-menu-item class="menu-item">
+          <mat-icon class="menu-icon">settings</mat-icon> Paramètres
+        </button>
+        <button mat-menu-item class="menu-item" (click)="home()">
+          <mat-icon class="menu-icon">account_box</mat-icon> Profil
+        </button>
+        <button mat-menu-item class="menu-item">
+          <mat-icon class="menu-icon">notifications_off</mat-icon> Désactiver les notifications
+        </button>
+        <button mat-menu-item class="menu-item" (click)="logout()">
+          <mat-icon class="menu-icon">exit_to_app</mat-icon> Déconnexion
+        </button>
+      </mat-menu>
+      
 </div>
 <mat-nav-list appAccordion>
     <mat-list-item appAccordionLink *ngFor="let menuitem of menuItems.getMenuitem()" routerLinkActive="selected" group="{{menuitem.state}}">
