--- a/accompany-consullting/src/app/add-consultant/add-consultant.component.html
+++ b/accompany-consullting/src/app/add-consultant/add-consultant.component.html
@@ -186,6 +186,9 @@
         <mat-option value="CDD">CDD</mat-option>
     </mat-select>
   </mat-form-field>
+  <mat-form-field>
+    <input type="number" matInput placeholder="salaire" name="salaire" formControlName="salaire" required>
+  </mat-form-field>
 <!-- =================================== -->
 
 
