--- a/accompany-consullting/src/app/consultantdetail/consultantdetail.component.html
+++ b/accompany-consullting/src/app/consultantdetail/consultantdetail.component.html
@@ -38,6 +38,8 @@
             <hr>
             <div class="col-md-6">
               <p><strong>Code :</strong> {{consultant.code}}</p>
+              <p><strong>Salaire :</strong> {{consultant.salaire}}</p>
+
 
                 <p><strong>Fonction :</strong> {{consultant.fonction}}</p>
                 <p><strong>Grade:</strong>  {{consultant.grade}}</p>
