--- a/accompany-consullting/src/app/manager-eval/manager-eval.component.html
+++ b/accompany-consullting/src/app/manager-eval/manager-eval.component.html
@@ -93,7 +93,7 @@
         <!-- Button to add a new form -->
         <div style="text-align: center;">
             <mat-action-row class="rows">
-              <button mat-raised-button color="primary" (click)="onclique()">Terminer
+              <button mat-raised-button color="primary" >Terminer
                 <mat-icon>open_in_new</mat-icon>
               </button>
           
