--- a/accompany-consullting/src/app/updateconsultant/updateconsultant.component.html
+++ b/accompany-consullting/src/app/updateconsultant/updateconsultant.component.html
@@ -169,7 +169,10 @@
   <!-- =================================== -->
   
 
-
+  <mat-form-field>
+    <input  type="number" matInput placeholder="salaire " name="salaire" formControlName="salaire" >
+   
+  </mat-form-field>
 
  
  
