--- a/accompany-consullting/src/app/evaluation/evaluation.component.html
+++ b/accompany-consullting/src/app/evaluation/evaluation.component.html
@@ -33,8 +33,10 @@
     <ng-container matColumnDef="integration">
       <th mat-header-cell *matHeaderCellDef class="thead-info"> <span class="table-title">Type d'intégration</span> </th>
       <td mat-cell *matCellDef="let consultant" [ngClass]="{'highlight-row': isNextEvaluationToday(consultant)}">
-        <span *ngIf="consultant.isI3 && !consultant.isI1">Intégration 3 mois</span>
-        <span *ngIf="consultant.isI1 && !consultant.isI3">Intégration 1 mois</span>
+        <span *ngIf="consultant.isI3 && !consultant.isI1 && !consultant.isI6">Intégration 3 mois</span>
+        <span *ngIf="consultant.isI1 && !consultant.isI3  && !consultant.isI6 ">Intégration 1 mois</span>
+        <span *ngIf="consultant.isI6 && !consultant.isI1 && !consultant.isI3">Evaluation 6 mois</span>
+
      
       </td>
     </ng-container>
@@ -46,13 +48,19 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef class="thead-info"> <span class="table-title">Action</span> </th>
       <td mat-cell *matCellDef="let consultant" [ngClass]="{'highlight-row': isNextEvaluationToday(consultant)}">
-      
-        <button mat-icon-button color="primary" (click)="evaluerConsultant1(consultant.id, consultant.nom, consultant.prenom, consultant.date_integration, consultant.grade, consultant.isI3 ? 'Intégration 3 mois' : 'Intégration 1 mois')">
+    
+        <button mat-icon-button color="primary" *ngIf="!consultant.isI6 " (click)="evaluerConsultant1(consultant.id, consultant.nom, consultant.prenom, consultant.date_integration, consultant.grade, consultant.isI3 ? 'Intégration 3 mois' : 'Intégration 1 mois')">
           <mat-icon>play_arrow</mat-icon>
           {{ consultant.isI3 && !consultant.isI1 ? 'Intégration 3 mois' : consultant.isI1 && !consultant.isI3 ? 'Intégration 1 mois' : '' }}
         </button>
+    
+        <button mat-icon-button color="primary" *ngIf="consultant.isI6 && !consultant.isI1 && !consultant.isI3" (click)="eval_competance(consultant.id, consultant.nom, consultant.prenom, consultant.date_integration, consultant.grade, 'Evaluation 6 mois')">
+          <mat-icon>play_arrow</mat-icon>
+          Evaluation 6 mois
+        </button>
       </td>
     </ng-container>
+    
   
   
   </table>
