--- a/accompany-consullting/src/app/eval-competance/eval-competance.component.html
+++ b/accompany-consullting/src/app/eval-competance/eval-competance.component.html
@@ -35,7 +35,7 @@
   
     <mat-toolbar style="background-color: #1347a4;">
       <mat-toolbar-row>
-        <span style="margin-left: auto;margin-right: auto;color: aliceblue;">Liste des missions</span>
+        <span style="margin-left: auto;margin-right: auto;color: aliceblue;text-align: center;">Liste des missions</span>
       </mat-toolbar-row>
     </mat-toolbar>
   
@@ -44,10 +44,10 @@
         <td colspan="6">
           <mat-toolbar style="background-color: #1e5d6b; color: antiquewhite;">
             <mat-toolbar-row>
-              <div class="row">
-                <div class="col-8">
-                  <span>Titre: {{ mission.titre }}</span>
-                </div>
+              <div style="text-align: center;" >
+                
+                  <span >Titre: {{ mission.titre }}</span>
+                
               </div>
             </mat-toolbar-row>
           </mat-toolbar>
