--- a/accompany-consullting/src/app/evaluation/evaluation.component.html
+++ b/accompany-consullting/src/app/evaluation/evaluation.component.html
@@ -1,68 +1,191 @@
-
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <mat-card>
-    <div class="p-20 bg-info position-relative">
-        <h4 class="card-title text-white m-0">Liste des consultants</h4>
+  <div class="p-20 bg-info position-relative">
+    <h4 class="card-title text-white m-0">Liste des évaluations
      
-      </div>
+    </h4>
+  </div>
+  <br>
+  <div class="row col-12">
+    <div class="btn-group" role="group">
+      <button type="button" class="btn btn-primary mr-2" (click)="showEvaluationHistory()">
+        <img src="assets\images\liste-de-travail.gif" alt="Liste de travail" width="24" height="24">
+       integration
+      </button>
+
+      <button type="button" class="btn btn-primary mr-2" (click)="showEvalcomp()">
+        <i class="fa fa-tasks"></i> Compétences
+      </button>
+
+      <button type="button" class="btn btn-primary mr-2" (click)="alert()">
+        <i class="fa fa-bell-o"></i> Évaluations à faire
+      </button>
+    </div>
+  </div>
+
+  <br>
+
+  <div *ngIf="currentList === 'alert'">
+    <table class="table mat-elevation-z8 consultant-table" mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="nom prenom">
+        <th mat-header-cell *matHeaderCellDef class="thead-info">
+          <span class="table-title">Nom & Prénom</span>
+        </th>
+        <td mat-cell *matCellDef="let consultant" [ngClass]="{'highlight-row': isNextEvaluationToday(consultant)}">
+          {{ consultant.nom }} {{ consultant.prenom }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="date_integration">
+        <th mat-header-cell *matHeaderCellDef class="thead-info">
+          <span class="table-title">Date d'intégration</span>
+        </th>
+        <td mat-cell *matCellDef="let consultant" [ngClass]="{'highlight-row': isNextEvaluationToday(consultant)}">
+          {{ consultant.date_integration | date:'dd-MM-yyyy' }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="prochain_entretien">
+        <th mat-header-cell *matHeaderCellDef class="thead-info">
+          <span class="table-title">Prochain entretien</span>
+        </th>
+        <td mat-cell *matCellDef="let consultant" [ngClass]="{'highlight-row': isNextEvaluationToday(consultant)}">
+          {{ consultant.prochain_entretien }}
+          <mat-icon class="entretien-icon" [ngClass]="{'entretien-today': isNextEvaluationToday(consultant)}">event</mat-icon>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="integration">
+        <th mat-header-cell *matHeaderCellDef class="thead-info">
+          <span class="table-title">Type d'intégration</span>
+        </th>
+        <td mat-cell *matCellDef="let consultant" [ngClass]="{'highlight-row': isNextEvaluationToday(consultant)}">
+          <span *ngIf="consultant.isI3 && !consultant.isI1 && !consultant.isI6">Intégration 3 mois</span>
+          <span *ngIf="consultant.isI1 && !consultant.isI3  && !consultant.isI6">Intégration 1 mois</span>
+          <span *ngIf="consultant.isI6 && !consultant.isI1 && !consultant.isI3">Evaluation 6 mois</span>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="[ 'nom prenom', 'date_integration', 'prochain_entretien', 'integration', 'action']"></tr>
+      <tr mat-row *matRowDef="let consultant; columns: [ 'nom prenom', 'date_integration', 'prochain_entretien', 'integration', 'action'];"></tr>
+
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef class="thead-info">
+          <span class="table-title">Action</span>
+        </th>
+        <td mat-cell *matCellDef="let consultant" [ngClass]="{'highlight-row': isNextEvaluationToday(consultant)}">
+          <button mat-icon-button color="primary" *ngIf="!consultant.isI6" (click)="evaluerConsultant1(consultant.id, consultant.nom, consultant.prenom, consultant.date_integration, consultant.grade, consultant.isI3 ? 'Intégration 3 mois' : 'Intégration 1 mois')">
+            <mat-icon>play_arrow</mat-icon>
+            {{ consultant.isI3 && !consultant.isI1 ? 'Intégration 3 mois' : consultant.isI1 && !consultant.isI3 ? 'Intégration 1 mois' : '' }}
+          </button>
+
+          <button mat-icon-button color="primary" *ngIf="consultant.isI6 && !consultant.isI1 && !consultant.isI3" (click)="eval_competance(consultant.id, consultant.nom, consultant.prenom, consultant.date_integration, consultant.grade, 'Evaluation 6 mois')">
+            <mat-icon>play_arrow</mat-icon>
+            Evaluation 6 mois
+          </button>
+        </td>
+      </ng-container>
+
+      <button mat-button color="primary" (click)="returnToList()">Retour à la liste</button>
+    </table>
+  </div>
 
   <div>
-  <table class="table mat-elevation-z8 consultant-table" mat-table [dataSource]="integrationConsultants">
-    <ng-container matColumnDef="nom prenom">
-      <th mat-header-cell *matHeaderCellDef class="thead-info"> <span class="table-title">Nom & Prénom</span> </th>
-      <td mat-cell *matCellDef="let consultant" [ngClass]="{'highlight-row': isNextEvaluationToday(consultant)}">{{ consultant.nom }} {{ consultant.prenom }}</td>
-     
-    </ng-container>
+    <div *ngIf="currentList === 'historique'">
+      <table mat-table [dataSource]="evaluations" class="table mat-elevation-z8 consultant-table">
 
-    <ng-container matColumnDef="date_integration">
-      <th mat-header-cell *matHeaderCellDef class="thead-info"> <span class="table-title">Date d'intégration</span> </th>
-      <td mat-cell *matCellDef="let consultant" [ngClass]="{'highlight-row': isNextEvaluationToday(consultant)}">{{ consultant.date_integration | date:'dd-MM-yyyy' }}</td>
-    
-    </ng-container>
+        <!-- Autres colonnes existantes -->
+        
+        <ng-container matColumnDef="nom">
+          <th mat-header-cell *matHeaderCellDef class="thead-info">
+            <span class="table-title">Consultant</span>
+          </th>
+          <td mat-cell *matCellDef="let evaluation">{{ evaluation.nomconsultant }}</td>
+        </ng-container>
 
-    <ng-container matColumnDef="prochain_entretien">
-      <th mat-header-cell *matHeaderCellDef class="thead-info"> <span class="table-title">Prochain entretien</span> </th>
-      <td mat-cell *matCellDef="let consultant" [ngClass]="{'highlight-row': isNextEvaluationToday(consultant)}">
-        {{ consultant.prochain_entretien }}
-        <mat-icon class="entretien-icon" [ngClass]="{'entretien-today': isNextEvaluationToday(consultant)}">event</mat-icon>
-      </td>
-    </ng-container>
+        <ng-container matColumnDef="type_eval">
+          <th mat-header-cell *matHeaderCellDef class="thead-info">
+            <span class="table-title">type_évaluation</span>
+          </th>
+          <td mat-cell *matCellDef="let evaluation">{{ evaluation.type_eval }}</td>
+        </ng-container>
 
-    <ng-container matColumnDef="integration">
-      <th mat-header-cell *matHeaderCellDef class="thead-info"> <span class="table-title">Type d'intégration</span> </th>
-      <td mat-cell *matCellDef="let consultant" [ngClass]="{'highlight-row': isNextEvaluationToday(consultant)}">
-        <span *ngIf="consultant.isI3 && !consultant.isI1 && !consultant.isI6">Intégration 3 mois</span>
-        <span *ngIf="consultant.isI1 && !consultant.isI3  && !consultant.isI6 ">Intégration 1 mois</span>
-        <span *ngIf="consultant.isI6 && !consultant.isI1 && !consultant.isI3">Evaluation 6 mois</span>
-
-     
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="[ 'nom prenom', 'date_integration', 'prochain_entretien', 'integration','action']"></tr>
-    <tr mat-row *matRowDef="let consultant; columns: [ 'nom prenom', 'date_integration', 'prochain_entretien', 'integration','action'];"></tr>
+        <ng-container matColumnDef="Date_evaluation">
+          <th mat-header-cell *matHeaderCellDef class="thead-info">
+            <span class="table-title">Date_evaluation</span>
+          </th>
+          <td mat-cell *matCellDef="let evaluation">{{ evaluation.date_evaluation | date:'dd-MM-yyyy'}}  <mat-icon class="entretien-icon">event</mat-icon></td>
+        </ng-container>
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef class="thead-info">
+            <span class="table-title">Action</span>
+          </th>
+          <td mat-cell *matCellDef="let consultant" >
+          
   
+            <button type="button" class="btn btn-primary">Consulter</button>
   
-    <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef class="thead-info"> <span class="table-title">Action</span> </th>
-      <td mat-cell *matCellDef="let consultant" [ngClass]="{'highlight-row': isNextEvaluationToday(consultant)}">
-    
-        <button mat-icon-button color="primary" *ngIf="!consultant.isI6 " (click)="evaluerConsultant1(consultant.id, consultant.nom, consultant.prenom, consultant.date_integration, consultant.grade, consultant.isI3 ? 'Intégration 3 mois' : 'Intégration 1 mois')">
-          <mat-icon>play_arrow</mat-icon>
-          {{ consultant.isI3 && !consultant.isI1 ? 'Intégration 3 mois' : consultant.isI1 && !consultant.isI3 ? 'Intégration 1 mois' : '' }}
-        </button>
-    
-        <button mat-icon-button color="primary" *ngIf="consultant.isI6 && !consultant.isI1 && !consultant.isI3" (click)="eval_competance(consultant.id, consultant.nom, consultant.prenom, consultant.date_integration, consultant.grade, 'Evaluation 6 mois')">
-          <mat-icon>play_arrow</mat-icon>
-          Evaluation 6 mois
-        </button>
-      </td>
-    </ng-container>
-    
-  
-  
-  </table>
-</div>
+          </td>
+        </ng-container>
+        <!-- Ajoutez autant de colonnes que nécessaire pour les champs de l'évaluation -->
+
+        <tr mat-header-row *matHeaderRowDef="['nom', 'type_eval', 'Date_evaluation','action']"></tr>
+        <tr mat-row *matRowDef="let evaluation; columns: [ 'nom','type_eval', 'Date_evaluation','action' ];"></tr>
+
+        <!-- Autres colonnes existantes -->
+
+      </table>
+    </div>
+
+  </div>
+
+  <div *ngIf="currentList === 'competance'">  
+      <table mat-table [dataSource]="evalcomps" class="table mat-elevation-z8 consultant-table">
+      <!-- Define the columns for evaluation competence data -->
+
+
+      <ng-container matColumnDef="nom">
+        <th mat-header-cell *matHeaderCellDef class="thead-info">
+         
+          <span class="table-title">Consultant   </span>
+        </th>
+        <td mat-cell *matCellDef="let evalcomp">{{ evalcomp.nomconsultant}}</td>
+      </ng-container>
+
+
+      <ng-container matColumnDef="notefinal">
+        <th mat-header-cell *matHeaderCellDef class="thead-info">
+          <span class="table-title">Note final </span>
+        </th>
+        <td mat-cell *matCellDef="let evalcomp">{{ evalcomp.notefinal }}</td>
+
+      </ng-container>
+      <ng-container matColumnDef="Date_evaluation">
+        <th mat-header-cell *matHeaderCellDef class="thead-info">
+          <span class="table-title">Date d'évaluation</span>
+        </th>
+        <td mat-cell *matCellDef="let evalcomp">{{ evalcomp.date_evaluation | date:'dd-MM-yyyy'}}
+          <mat-icon class="entretien-icon">event</mat-icon>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef class="thead-info">
+          <span class="table-title">Action</span>
+        </th>
+        <td mat-cell *matCellDef="let consultant" >
+        
+
+          <button type="button" class="btn btn-primary">Consulter</button>
+
+        </td>
+      </ng-container>
+      <!-- Add more columns as needed for evaluation competence data -->
+
+      <!-- Define the header row and data rows -->
+      <tr mat-header-row *matHeaderRowDef="['nom','notefinal', 'Date_evaluation','action']"></tr>
+      <tr mat-row *matRowDef="let evalcomps; columns: ['nom','notefinal', 'Date_evaluation','action'];"></tr>
+    </table>
+  </div>
 </mat-card>
