--- a/accompany-consullting/src/app/list-entretien/list-entretien.component.html
+++ b/accompany-consullting/src/app/list-entretien/list-entretien.component.html
@@ -18,10 +18,10 @@
 <div class="row col-12">
   <div class="btn-group" role="group">
     
-    <button type="button" class="btn btn-primary mr-2" (click)="filteredEntretiensbyaction('Historique')">
+    <button type="button"  class="btn btn-primary mr-2"  style=" border-radius: 10px;"(click)="filteredEntretiensbyaction('Historique')">
          <i class="fa fa-history"></i> Historique
     </button>
-    <button type="button" class="btn btn-primary" (click)="allentretien()">
+    <button type="button" class="btn btn-primary" style=" border-radius: 10px;" (click)="allentretien()">
         <i class="fa fa-clock-o"></i> Entretien à faire
     </button>
   </div>
