--- a/accompany-consullting/src/app/listconsultant/listconsultant.component.html
+++ b/accompany-consullting/src/app/listconsultant/listconsultant.component.html
@@ -19,13 +19,13 @@
 
     <div class="row col-12">
         <div class="btn-group" role="group">
-          <button type="button" class="btn btn-primary mr-2" (click)="filterConsultantsByStatus('actif')">
+          <button type="button" class="btn btn-primary mr-2" style=" border-radius: 10px;" (click)="filterConsultantsByStatus('actif')">
             <i class="fa fa-check-circle"></i> Actif
           </button>
-          <button type="button" class="btn btn-primary mr-2" (click)="filterConsultantsByStatus('inactif')">
+          <button type="button" class="btn btn-primary mr-2" style=" border-radius: 10px;" (click)="filterConsultantsByStatus('inactif')">
             <i class="fa fa-times-circle"></i> Inactif
           </button>
-          <button type="button" class="btn btn-primary" (click)="filterConsultantsByStatus('')">
+          <button type="button" class="btn btn-primary" style=" border-radius: 10px;" (click)="filterConsultantsByStatus('')">
             <i class="fa fa-list"></i> Tous
           </button>
         </div>
@@ -52,7 +52,7 @@
      
     <br><br>
     <div class="col-3 ">
-        <button class="text-white" style="background-color: rgb(226, 68, 68);" (click)="pdf(type)">
+        <button class="text-white" style="background-color: rgb(226, 68, 68);border-radius: 10px;" (click)="pdf(type)">
             <i class="fa fa-file-pdf-o"></i> PDF
           </button>
 
