--- a/accompany-consullting/src/app/manager-eval/manager-eval.component.html
+++ b/accompany-consullting/src/app/manager-eval/manager-eval.component.html
@@ -27,7 +27,7 @@
             <tr style="background-color: #20c4d8; color: aliceblue; ">
                 <td>Critères</td>
                 <td>Consultant</td>
-                <td>HR BP</td>
+                <td>Commentaire </td>
               </tr>
             <tr>
               <td>Roles et responsabilités </td>
@@ -81,7 +81,7 @@
               </th>
               <th>
                 <div style="margin-left : 120px;">
-                  <textarea class="form-control border" placeholder="Leave a comment here" id="floatingTextarea2" formControlName="feedbackManager" required style="height: 100px ; width: 500px ;"></textarea>
+                  <textarea class="form-control border" placeholder="Laissez un commentaire ici" id="floatingTextarea2" formControlName="feedbackManager" required style="height: 100px ; width: 500px ;"></textarea>
                 </div>
               </th>
             </tr>
