--- a/accompany-consullting/src/app/conges/congeshr/congeshr.component.html
+++ b/accompany-consullting/src/app/conges/congeshr/congeshr.component.html
@@ -1,6 +1,8 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<mat-card>
 <div class="p-20 bg-info position-relative">
   <h4 class="card-title text-white m-0">Liste des congés</h4>
 </div>
@@ -63,4 +65,4 @@
     <mat-header-row *matHeaderRowDef="['demandeurnom','validateurnom', 'dateDebut', 'dateFin','duree', 'etat','actions']"></mat-header-row>
     <mat-row *matRowDef="let row; columns: ['demandeurnom','validateurnom', 'dateDebut', 'dateFin','duree', 'etat','actions'];"></mat-row>
   </mat-table>
-  
+</mat-card>
