--- a/accompany-consullting/src/app/eval-rh-integration/eval-rh-integration.component.css
+++ b/accompany-consullting/src/app/eval-rh-integration/eval-rh-integration.component.css
@@ -30,3 +30,10 @@
 .rows {
   margin-left: auto;
 }
+
+label{
+  text-indent: 25 px;
+  font-size: medium;
+  font-family: Georgia, serif;
+  color: #24527a;
+}
