--- a/accompany-consullting/src/app/mission/mission.component.html
+++ b/accompany-consullting/src/app/mission/mission.component.html
@@ -51,7 +51,7 @@
             <tr>
               <td>Critères</td>
               <td>Consultant</td>
-              <td>HR BP</td>
+              <td></td>
             </tr>
             <tr>
               <td>Roles et responsabilités</td>
@@ -66,14 +66,9 @@
                 </select>
               </td>
               <td>
-                <select id="roleRH" formControlName="roleRH" required>
-                  <option value="">Sélectionnez une option</option>
-                  <option value="Très satisfait">Très satisfait</option>
-                  <option value="Satisfait">Satisfait</option>
-                  <option value="Moyennement satisfait">Moyennement satisfait</option>
-                  <option value="Insuffisant">Insuffisant</option>
-                  <option value="">-</option>
-                </select>
+             
+                <textarea class="form-control border" placeholder="Laissez un commentaire ici" id="floatingTextarea2" formControlName="roleRH" required style="height: 100px ; width: 500px ;"></textarea>
+
               </td>
             </tr>
             <tr>
@@ -89,14 +84,9 @@
                 </select>
               </td>
               <td>
-                <select id="relationClientRH" formControlName="relationClientRH" required>
-                  <option value="">Sélectionnez une option</option>
-                  <option value="Très satisfait">Très satisfait</option>
-                  <option value="Satisfait">Satisfait</option>
-                  <option value="Moyennement satisfait">Moyennement satisfait</option>
-                  <option value="Insuffisant">Insuffisant</option>
-                  <option value="">-</option>
-                </select>
+             
+                <textarea class="form-control border" placeholder="Laissez un commentaire ici" id="floatingTextarea2" formControlName="relationClientRH" required style="height: 100px ; width: 500px ;"></textarea>
+
               </td>
             </tr>
             <tr>
@@ -112,14 +102,9 @@
                 </select>
               </td>
               <td>
-                <select id="chargeRH" formControlName="chargeRH" required>
-                  <option value="">Sélectionnez une option</option>
-                  <option value="Très satisfait">Très satisfait</option>
-                  <option value="Satisfait">Satisfait</option>
-                  <option value="Moyennement satisfait">Moyennement satisfait</option>
-                  <option value="Insuffisant">Insuffisant</option>
-                  <option value="">-</option>
-                </select>
+     
+                <textarea class="form-control border" placeholder="Laissez un commentaire ici" id="floatingTextarea2" formControlName="chargeRH" required style="height: 100px ; width: 500px ;"></textarea>
+
               </td>
             </tr>
             <tr>
@@ -135,14 +120,9 @@
                 </select>
               </td>
               <td>
-                <select id="satisficationRH" formControlName="satisficationRH" required>
-                  <option value="">Sélectionnez une option</option>
-                  <option value="Très satisfait">Très satisfait</option>
-                  <option value="Satisfait">Satisfait</option>
-                  <option value="Moyennement satisfait">Moyennement satisfait</option>
-                  <option value="Insuffisant">Insuffisant</option>
-                  <option value="">-</option>
-                </select>
+                
+                <textarea class="form-control border" placeholder="Laissez un commentaire ici" id="floatingTextarea2" formControlName="satisficationRH" required style="height: 100px ; width: 500px ;"></textarea>
+
               </td>
             </tr>
           </tbody>
